tests/models/enum/named/f32/pass/default.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(default = 1.0)]
        value: f32
    },
}
fn main() {}
